--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "animated-svg-badge-for-readme",
-  "version": "0.0.1",
-  "description": "An express app for dynamic animated svg from API",
-  "author": "@ashishpawar517",
-  "engines": {
-    "node": ">=8.17.0"
-  },
-  "scripts": {
-    "start": "node index.js"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.1"
-  }
+    "express": "^4.16.4",
+    "netlify-lambda": "^1.4.3",
+    "serverless-http": "^1.9.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ashishpawar517/Animated-SVG-Badge-for-Readme.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ashishpawar517/Animated-SVG-Badge-for-Readme/issues"
+  },
+  "homepage": "https://github.com/ashishpawar517/Animated-SVG-Badge-for-Readme#readme"
 }
